[tool.poetry]
name = "visibility_fit"
version = "0.1.0"
description = ""
authors = ["yyamato-as <yyamato.as@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
astropy = "^5.0.2"
regions = "^0.5"
ipython = "^8.1.1"
casatasks = "^6.4.3"
casatools = "^6.4.3"
casadata = "^2022.1.17"
galario = {git = "https://github.com/yyamato-as/galario.git", rev = "main"}
emcee = "^3.1.1"
tqdm = "^4.63.0"
corner = "^2.2.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
