[tool.poetry]
name = "visibility_fit"
version = "0.1.0"
description = ""
authors = ["yyamato-as <yyamato.as@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.22.3"
astropy = "^5.0.4"
matplotlib = "^3.5.2"
casatasks = "^6.4.4"
casatools = "^6.4.4"
casadata = "^2022.1.17"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
